--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,8 @@ dependencies {
 
     // PICASSO
     implementation 'com.squareup.picasso:picasso:2.71828'
-
+    
+    //Stetho
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+    implementation 'com.facebook.stetho:stetho:1.5.0'
 }
